--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
           <artifactId>commons-pool</artifactId>
           <version>1.6</version>
       </dependency>
+      <dependency>
+          <groupId>mysql</groupId>
+          <artifactId>mysql-connector-java</artifactId>
+          <version>5.1.10</version>
+      </dependency>
       <!-- slf4j logging facade -->
       <dependency>
           <groupId>org.slf4j</groupId>
